nav linked scroll

--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -27,60 +27,60 @@
 
   <!-- NAVBAR -->
   <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; bottom: #transparent-sticky-navbar">
-    <nav class="uk-navbar-container" id="nav_bar" uk-navbar style="position: relative; z-index: 980;">
+   <nav class="uk-navbar-container" id="nav_bar" uk-navbar style="position: relative; z-index: 980;">
         <div class="uk-navbar-left">
             <ul class="uk-navbar-nav">
-                <li><a href="#bg1" uk-icon="home"></a></li>
+                <li><a href="#bg1" uk-icon="home" uk-scroll></a></li>
             </ul>
         </div>
-      <div class="uk-navbar-right">
-        <ul class="uk-navbar-nav">
-          <li>
-            <a>ABOUT</a>
-            <div class="uk-navbar-dropdown">
-              <ul class="uk-nav uk-navbar-dropdown-nav">
-                <li><a href="#what_is">WHAT IS SOFTWARE ENGINEERING</a></li>
-                <li class="uk-nav-divider"></li>
-                <li><a href="#how_differ">DIFFERENT</a></li>
-                <li class="uk-nav-divider"></li>
-                <li><a href="#bg2">ELIGIBLE</a></li>
-                <li class="uk-nav-divider"></li>
-                <li><a href="#to_do">TO DE / TO HAVE</a></li>
-                <li class="uk-nav-divider"></li>
-                <li><a href="#ex_of_career">EXAMPLE CAREER</a></li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <a href="#subject">BRANCH SUBJECT</a>
-            <div class="uk-navbar-dropdown">
-              <ul class="uk-nav uk-navbar-dropdown-nav">
-                <li><a href="#se">SOFTWARE ENGINEERING</a></li>
-                <li class="uk-nav-divider"></li>
-                <li><a href="#wp">WEB PROGRAMMING</a></li>
-                <li class="uk-nav-divider"></li>
-                <li><a href="#mdp">MOBILE DEVICE PROGRAMMING</a></li>
-                <li class="uk-nav-divider"></li>
-                <li><a href="#re">REQUIREMENT ENGINEERING</a></li>
-                <li class="uk-nav-divider"></li>
-                <li><a href="#sop">SERVICE-ORIENTED PROGRAMMING</a></li>
-                <li class="uk-nav-divider"></li>
-                <li><a href="#svav">SOFTWARE VERIFICATION AND VALIDATION</a></li>
-                <li class="uk-nav-divider"></li>
-                <li><a href="#cbead">CLOUD-BASED ENTERPRISE APPLICATION DEVELOPMENT</a></li>
-                <li class="uk-nav-divider"></li>
-                <li><a href="#sdtae">SOFTWARE DEVELOPMENT TOOLS AND ENVIRONMENTS</a></li>
-                <li class="uk-nav-divider"></li>
-                <li><a href="#pro1">PROJECT IN SOFTWARE ENGINEERING 1</a></li>
-                <li class="uk-nav-divider"></li>
-                <li><a href="#pro2">PROJECT IN SOFTWARE ENGINEERING 2</a></li>
-              </ul>
-            </div>
-          </li>
-          <li><a href="#subj_table">SUBJECT TABLE</a></li>
-          <li><a href="#q_and_a">Q&A</a></li>
-        </ul>
-      </div>
+       <div class="uk-navbar-right">
+           <ul class="uk-navbar-nav">
+             <li>
+               <a>ABOUT</a>
+               <div class="uk-navbar-dropdown">
+                 <ul class="uk-nav uk-navbar-dropdown-nav">
+                   <li><a href="#what_is" uk-scroll>WHAT IS SOFTWARE ENGINEERING</a></li>
+                   <li class="uk-nav-divider"></li>
+                   <li><a href="#how_differ" uk-scroll>DIFFERENT</a></li>
+                   <li class="uk-nav-divider"></li>
+                   <li><a href="#bg2" uk-scroll>ELIGIBLE</a></li>
+                   <li class="uk-nav-divider"></li>
+                   <li><a href="#to_do" uk-scroll>TO DE / TO HAVE</a></li>
+                   <li class="uk-nav-divider"></li>
+                   <li><a href="#ex_of_career" uk-scroll>EXAMPLE CAREER</a></li>
+                 </ul>
+               </div>
+             </li>
+             <li>
+               <a href="#subject" uk-scroll>BRANCH SUBJECT</a>
+               <div class="uk-navbar-dropdown">
+                 <ul class="uk-nav uk-navbar-dropdown-nav">
+                   <li><a href="#se" uk-scroll>SOFTWARE ENGINEERING</a></li>
+                   <li class="uk-nav-divider"></li>
+                   <li><a href="#wp" uk-scroll>WEB PROGRAMMING</a></li>
+                   <li class="uk-nav-divider"></li>
+                   <li><a href="#mdp" uk-scroll>MOBILE DEVICE PROGRAMMING</a></li>
+                   <li class="uk-nav-divider"></li>
+                   <li><a href="#re" uk-scroll>REQUIREMENT ENGINEERING</a></li>
+                   <li class="uk-nav-divider"></li>
+                   <li><a href="#sop" uk-scroll>SERVICE-ORIENTED PROGRAMMING</a></li>
+                   <li class="uk-nav-divider"></li>
+                   <li><a href="#svav" uk-scroll>SOFTWARE VERIFICATION AND VALIDATION</a></li>
+                   <li class="uk-nav-divider"></li>
+                   <li><a href="#cbead" uk-scroll>CLOUD-BASED ENTERPRISE APPLICATION DEVELOPMENT</a></li>
+                   <li class="uk-nav-divider"></li>
+                   <li><a href="#sdtae" uk-scroll>SOFTWARE DEVELOPMENT TOOLS AND ENVIRONMENTS</a></li>
+                   <li class="uk-nav-divider"></li>
+                   <li><a href="#pro1" uk-scroll>PROJECT IN SOFTWARE ENGINEERING 1</a></li>
+                   <li class="uk-nav-divider"></li>
+                   <li><a href="#pro2" uk-scroll>PROJECT IN SOFTWARE ENGINEERING 2</a></li>
+                 </ul>
+               </div>
+             </li>
+             <li><a href="#subj_table" uk-scroll>SUBJECT TABLE</a></li>
+             <li><a href="#q_and_a" uk-scroll>Q&A</a></li>
+           </ul>
+         </div>
     </nav>
   </div>
 
@@ -214,7 +214,7 @@
       </div>
     </li>
     <li>
-      <a class="uk-accordion-title" href="#" id="ไย">WEB PROGRAMMING</a>
+      <a class="uk-accordion-title" href="#" id="wp">WEB PROGRAMMING</a>
       <div class="uk-accordion-content">
         <p>Subject code: 06016322<br>
           Prerequisite: 06016317 OBJECT-ORIENTED PROGRAMMING<br>
@@ -321,7 +321,7 @@
       </div>
     </li>
     <li>
-      <a class="uk-accordion-title" href="#" pro2>PROJECT IN SOFTWARE ENGINEERING 2</a>
+      <a class="uk-accordion-title" href="#" id="pro2">PROJECT IN SOFTWARE ENGINEERING 2</a>
       <div class="uk-accordion-content">
         <p>
           Subject code: 06016330<br>
@@ -430,7 +430,7 @@
 
     <div class="container darker">
 
-      <img src="" alt="Avatar" class="right">
+      <img src="pic/test.jpg" alt="Avatar" class="right">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       <span class="time-left">11:05</span>
     </div>
