--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -26,7 +26,7 @@
   </div>
 
   <!-- NAVBAR -->
-  <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; bottom: #transparent-sticky-navbar">
+  <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; bottom: #transparent-sticky-navbar" uk-scrollspy="cls:uk-animation-fade; delay: 1000;">
     <nav class="uk-navbar-container" id="nav_bar" uk-navbar style="position: relative; z-index: 980;">
       <div class="uk-navbar-right">
         <ul class="uk-navbar-nav">
@@ -81,7 +81,7 @@
 
 
   <!--About Course-->
-  <div class="divide_div bg_color" id="1">
+  <div class="divide_div bg_color" id="1" uk-scrollspy="cls:uk-animation-fade; delay: 500;">
     <h1 class="uk-heading-bullet content">What is Software Engineering?</h1>
     <p class="content">Software engineering is the branch that focusing on programming, developing software systems in the service of mankind.
       <br>This course covers the fundamentals of software engineering, including understanding system
@@ -131,7 +131,7 @@
     <div class="uk-child-width-1-2 uk-child-width-1-3@s uk-grid-collapse uk-grid-small" uk-grid>
       <div class="uk-text-left">
         <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
-          <img src="arif-riyanto-974674-unsplash.jpg" alt="Programmer">
+          <img src="pic/career/programmer.jpeg" alt="Programmer">
           <div class="uk-transition-slide-bottom uk-position-cover uk-overlay uk-overlay-default">
             <p class="uk-h1 uk-margin-remove" align="center">Programmer</p>
           </div>
@@ -140,7 +140,7 @@
 
       <div class="uk-text-left">
         <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
-          <img src="pic/web_dev.jpg" alt="Web Developer">
+          <img src="pic/career/web_dev_resize.jpg" alt="Web Developer">
           <div class="uk-transition-slide-bottom uk-position-cover uk-overlay uk-overlay-default">
             <p class="uk-h1 uk-margin-remove" align="center">Web Developer</p>
           </div>
@@ -149,7 +149,7 @@
 
       <div class="uk-text-left">
         <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
-          <img src="arif-riyanto-974674-unsplash.jpg" alt="Software Tester">
+          <img src="pic/career/software_tester.jpeg" alt="Software Tester">
           <div class="uk-transition-slide-bottom uk-position-cover uk-overlay uk-overlay-default">
             <p class="uk-h1 uk-margin-remove" align="center">Software Tester</p>
           </div>
@@ -158,7 +158,7 @@
 
       <div class="uk-text-left">
         <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
-          <img src="arif-riyanto-974674-unsplash.jpg" alt="System Analyst">
+          <img src="pic/career/analysis.jpeg" alt="System Analyst">
           <div class="uk-transition-slide-bottom uk-position-cover uk-overlay uk-overlay-default">
             <p class="uk-h1 uk-margin-remove" align="center">System Analyst</p>
           </div>
@@ -167,7 +167,7 @@
 
       <div class="uk-text-left">
         <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
-          <img src="arif-riyanto-974674-unsplash.jpg" alt="Software Architect">
+          <img src="pic/career/architect.jpg" alt="Software Architect">
           <div class="uk-transition-slide-bottom uk-position-cover uk-overlay uk-overlay-default">
             <p class="uk-h1 uk-margin-remove" align="center">Software Architect</p>
           </div>
@@ -176,7 +176,7 @@
 
       <div class="uk-text-left">
         <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
-          <img src="arif-riyanto-974674-unsplash.jpg" alt="Project manager Assistant">
+          <img src="pic/career/Manager.jpeg" alt="Project manager Assistant">
           <div class="uk-transition-slide-bottom uk-position-cover uk-overlay uk-overlay-default">
             <p class="uk-h1 uk-margin-remove" align="center">Project manager Assistant</p>
           </div>
@@ -403,7 +403,7 @@
   </div>
 
   <!--  CHAT MESSAGE -->
-  <div class="divide_div">
+  <div class="divide_div" style="padding-top: 0px;">
     <h1>Q&A</h1>
     <div class="container">
       <img src="pic/test.jpg" alt="Avatar">
@@ -441,7 +441,7 @@
         <div class="uk-panel">
 
           <p>
-            Faculty of Information Technology, King Mougkut's Institute of Technology Ladkrabang
+            Faculty of Information Technology, King Mongkut's Institute of Technology Ladkrabang
           </p>
           <p>
             <span uk-icon="icon: location"></span>
