--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -83,32 +83,34 @@
          </div>
     </nav>
   </div>
-
-
+  
   <!--About Course-->
-  <div class="divide_div bg_color" id="what_is" uk-scrollspy="cls:uk-animation-fade; delay: 500;">
-    <h1 class="uk-heading-bullet content">What is Software Engineering?</h1>
-    <p class="content">Software engineering is the branch that focusing on programming, developing software systems in the service of mankind.
+  <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
+  <div class="uk-card-media-left uk-cover-container">
+        <img src="pic/what_is_se.jpg" alt="" uk-cover>
+        <canvas width="600" height="400"></canvas>
+    </div>
+    <div  class="divide_div bg_color">
+        <div>
+            <h1 class="uk-heading-bullet content" id="1">What is Software Engineering?</h1>
+            <p class="content">Software engineering is the branch that focusing on programming, developing software systems in the service of mankind.
       <br>This course covers the fundamentals of software engineering, including understanding system
       requirements, effective methods of design, coding, and testing.</p>
-  </div>
-  <br>
-
-  <!--How is Software Engineering differ from Multimedia and Network branch?-->
-  <div class="divide_div" id="how_differ">
-    <h1 class="uk-heading-bullet content">How different from the other two branches?</h1>
-    <p class="content">For Software Engineering, we are focusing on back-end developing and deep programming.<br>
+        </div>
+	  </div>
+	      <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
+        <img src="pic/how_diff.jpg" alt="" uk-cover>
+        <canvas width="600" height="400"></canvas>
+    </div>
+    <!--How is Software Engineering differ from Multimedia and Network branch?-->
+    <div>
+        <div class="divide_div">
+            <h1 class="uk-heading-bullet content">How different from the other two branches?</h1>
+            <p class="content">For Software Engineering, we are focusing on back-end developing and deep programming.<br>
       But for Multimedia and Game Development, students in this branch will learn about front-end development and the use of creativity.<br>
       Network and System Technology will focus on network.</p>
-  </div>
-  <br>
-
-  <!--Who is eligible for this branch?-->
-  <div class="divide_div" id="bg2">
-    <h1 class="white">Who is eligible for this branch?</h1>
-    <p class="white">1. Have programming knowledge.<br>
-      2. Have good logic.<br>
-      3. Have good mathematics knowledge.</p>
+        </div>
+    </div>
   </div>
   <br>
 
