fix branch subjects nav

--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -39,43 +39,20 @@
                <a>ABOUT</a>
                <div class="uk-navbar-dropdown">
                  <ul class="uk-nav uk-navbar-dropdown-nav">
-                   <li><a href="#what_is" uk-scroll>WHAT IS SOFTWARE ENGINEERING</a></li>
+                   <li><a href="#what_is" uk-scroll>WHAT IS SOFTWARE ENGINEERING?</a></li>
                    <li class="uk-nav-divider"></li>
-                   <li><a href="#how_differ" uk-scroll>DIFFERENT</a></li>
+                   <li><a href="#how_differ" uk-scroll>HOW SOFTWARE ENGINEERING DIFFERENT FROM THE OTHER TWO BRANCHES?</a></li>
                    <li class="uk-nav-divider"></li>
                    <li><a href="#bg2" uk-scroll>ELIGIBLE</a></li>
                    <li class="uk-nav-divider"></li>
-                   <li><a href="#to_do" uk-scroll>TO DE / TO HAVE</a></li>
+                   <li><a href="#to_do" uk-scroll>INTERESTED IN SOFTWARE ENGINEERING?</a></li>
                    <li class="uk-nav-divider"></li>
-                   <li><a href="#ex_of_career" uk-scroll>EXAMPLE CAREER</a></li>
+                   <li><a href="#ex_of_career" uk-scroll>CAREER EXAMPLE</a></li>
                  </ul>
                </div>
              </li>
              <li>
                <a href="#subject" uk-scroll>BRANCH SUBJECT</a>
-               <div class="uk-navbar-dropdown">
-                 <ul class="uk-nav uk-navbar-dropdown-nav">
-                   <li><a href="#se" uk-scroll>SOFTWARE ENGINEERING</a></li>
-                   <li class="uk-nav-divider"></li>
-                   <li><a href="#wp" uk-scroll>WEB PROGRAMMING</a></li>
-                   <li class="uk-nav-divider"></li>
-                   <li><a href="#mdp" uk-scroll>MOBILE DEVICE PROGRAMMING</a></li>
-                   <li class="uk-nav-divider"></li>
-                   <li><a href="#re" uk-scroll>REQUIREMENT ENGINEERING</a></li>
-                   <li class="uk-nav-divider"></li>
-                   <li><a href="#sop" uk-scroll>SERVICE-ORIENTED PROGRAMMING</a></li>
-                   <li class="uk-nav-divider"></li>
-                   <li><a href="#svav" uk-scroll>SOFTWARE VERIFICATION AND VALIDATION</a></li>
-                   <li class="uk-nav-divider"></li>
-                   <li><a href="#cbead" uk-scroll>CLOUD-BASED ENTERPRISE APPLICATION DEVELOPMENT</a></li>
-                   <li class="uk-nav-divider"></li>
-                   <li><a href="#sdtae" uk-scroll>SOFTWARE DEVELOPMENT TOOLS AND ENVIRONMENTS</a></li>
-                   <li class="uk-nav-divider"></li>
-                   <li><a href="#pro1" uk-scroll>PROJECT IN SOFTWARE ENGINEERING 1</a></li>
-                   <li class="uk-nav-divider"></li>
-                   <li><a href="#pro2" uk-scroll>PROJECT IN SOFTWARE ENGINEERING 2</a></li>
-                 </ul>
-               </div>
              </li>
              <li><a href="#subj_table" uk-scroll>SUBJECT TABLE</a></li>
              <li><a href="#q_and_a" uk-scroll>Q&A</a></li>
@@ -96,7 +73,7 @@
 
   <!--How is Software Engineering differ from Multimedia and Network branch?-->
   <div class="divide_div" id="how_differ">
-    <h1 class="uk-heading-bullet content">How different from the other two branches?</h1>
+    <h1 class="uk-heading-bullet content">How Software Enigneering different from the other two branches?</h1>
     <p class="content">For Software Engineering, we are focusing on back-end developing and deep programming.<br>
       But for Multimedia and Game Development, students in this branch will learn about front-end development and the use of creativity.<br>
       Network and System Technology will focus on network.</p>
@@ -114,7 +91,7 @@
 
   <!--What you need to do/to have if you are interested in this branch-->
   <div class="divide_div" id="to_do">
-    <h1>Less experience but interested in Software Engineering branch?</h1>
+    <h1>Less experience, but interested in Software Engineering branch?</h1>
 
     It would be easier to enter this branch if you have some experience in programming.<br>
 
@@ -131,7 +108,7 @@
   <!--Career after graduate-->
   <div id="ex_of_career">
     <div style="padding: 50px; background-color: black;">
-    <h1 align="center" style="color: white;">Example of career after graduated</h1>
+    <h1 align="center" class="white">Example of career after graduated</h1>
     </div>
     <div class="uk-child-width-1-2 uk-child-width-1-3@s uk-grid-collapse uk-grid-small" uk-grid>
       <div class="uk-text-left">
