add back eligible

--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -69,7 +69,7 @@
     </div>
     <div  class="divide_div bg_color">
         <div>
-            <h1 class="uk-heading-bullet content" id="1">What is Software Engineering?</h1>
+            <h1 class="uk-heading-bullet content" id="what_is">What is Software Engineering?</h1>
             <p class="content">Software engineering is the branch that focusing on programming, developing software systems in the service of mankind.
       <br>This course covers the fundamentals of software engineering, including understanding system
       requirements, effective methods of design, coding, and testing.</p>
@@ -79,6 +79,7 @@
         <img src="pic/how_diff.jpg" alt="" uk-cover>
         <canvas width="600" height="400"></canvas>
     </div>
+
     <!--How is Software Engineering differ from Multimedia and Network branch?-->
     <div>
         <div class="divide_div" id="how_differ">
@@ -88,6 +89,15 @@
       Network and System Technology will focus on network.</p>
         </div>
     </div>
+  </div>
+  <br>
+
+<!--Who is eligible for this branch?-->
+  <div class="divide_div" id="bg2">
+    <h1 class="white">Who is eligible for this branch?</h1>
+    <p class="white">1. Have programming knowledge.<br>
+      2. Have good logic.<br>
+      3. Have good mathematics knowledge.</p>
   </div>
   <br>
 
