--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -45,7 +45,7 @@
                    <li class="uk-nav-divider"></li>
                    <li><a href="#bg2" uk-scroll>ELIGIBLE</a></li>
                    <li class="uk-nav-divider"></li>
-                   <li><a href="#to_do" uk-scroll>TO DE / TO HAVE</a></li>
+                   <li><a href="#bg3" uk-scroll>TO DE / TO HAVE</a></li>
                    <li class="uk-nav-divider"></li>
                    <li><a href="#ex_of_career" uk-scroll>EXAMPLE CAREER</a></li>
                  </ul>
@@ -125,9 +125,9 @@
   <br>
 
   <!--What you need to do/to have if you are interested in this branch-->
-  <div class="divide_div" id="to_do">
-    <h1>Less experience but interested in Software Engineering branch?</h1>
-
+  <div class="divide_div" id="bg3">
+    <h1 class="white2">Less experience but interested in Software Engineering branch?</h1>
+    <p class="white2">
     It would be easier to enter this branch if you have some experience in programming.<br>
 
     Here at IT faculty, we have 3 programming subjects which are Problem Solving in Information Technology,
