comments and eligible

--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -60,16 +60,16 @@
          </div>
     </nav>
   </div>
-  
+
   <!--About Course-->
-  <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
+  <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s" uk-grid>
   <div class="uk-card-media-left uk-cover-container">
         <img src="pic/what_is_se.jpg" alt="" uk-cover>
         <canvas width="600" height="400"></canvas>
     </div>
-    <div  class="divide_div bg_color">
+    <div  class="divide_div"  id="what_is">
         <div>
-            <h1 class="uk-heading-bullet content" id="what_is">What is Software Engineering?</h1>
+            <h1 class="uk-heading-bullet content">What is Software Engineering?</h1>
             <p class="content">Software engineering is the branch that focusing on programming, developing software systems in the service of mankind.
       <br>This course covers the fundamentals of software engineering, including understanding system
       requirements, effective methods of design, coding, and testing.</p>
@@ -90,11 +90,12 @@
         </div>
     </div>
   </div>
-  <br>
+
+  <!-- test parallax -->
 
 <!--Who is eligible for this branch?-->
-  <div class="divide_div" id="bg2">
-    <h1 class="white">Who is eligible for this branch?</h1>
+  <div class="divide_div" uk-parallax="bgy: -400" id="bg2">
+    <h1 class="white">Eligible</h1>
     <p class="white">1. Have programming knowledge.<br>
       2. Have good logic.<br>
       3. Have good mathematics knowledge.</p>
@@ -103,7 +104,7 @@
 
   <!--What you need to do/to have if you are interested in this branch-->
   <div class="divide_div" id="to_do">
-    <h1>Less experience, but interested in Software Engineering branch?</h1>
+    <h1>Less experience, but interested in Software Engineering branch</h1>
 
     It would be easier to enter this branch if you have some experience in programming.<br>
 
@@ -326,7 +327,7 @@
 </div>
 
   <!-- TABLE -->
-  <div style="border: solid 2px; padding: 50px; margin: 100px; margin-top: 0px;" id="subj_table">
+  <div style="border: solid 2px; padding: 100px; margin: 100px; margin-top: 0px;" id="subj_table">
     <div style="text-align: center;"><button class="uk-button uk-button-default" type="button" uk-toggle="target: .toggle">SWITCH TABLE BETWEEN COOPERATIVE/WITHOUT COOPERATIVE</button></div>
     <!--///////////////////////// TABLE  PROJECT /////////////////////////////////-->
     <p class="toggle" align="center" id="head_table_project_w_coop"><b>Without Cooperative Work</b></p>
@@ -397,31 +398,33 @@
   </div>
 
   <!--  CHAT MESSAGE -->
-  <div class="divide_div" id="q_and_a" style="padding-top: 0px;">
-    <h1>Q&A</h1>
+  <div class="divide_div bg_color" id="q_and_a" style="padding-top: 50px;">
+    <h1>Comments from senior students</h1>
     <div class="container">
       <img src="pic/test.jpg" alt="Avatar">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <span class="time-right">11:00</span>
+      <p>This branch is good. It taught me about what I think it is easy, but in fact, it needs some processes to aqquried what is called it is easy.</p>
+      <span class="time-right">Mawin</span>
     </div>
 
     <div class="container darker">
       <img src="pic/test.jpg" alt="Avatar" class="right">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <span class="time-left">11:01</span>
+      <p>Software Engineering is subject that learn about software development mainly. Start from collect requirement to deliver the software to client.<br>
+Moreover, our faculty teaches main subjects for example requirement engineering, mobile application programming, software verification and validation and software development by using popular architecture.<br>
+Overall, this branch is full of programming course which is good for people who want to be a programmer.</p>
+      <span class="time-left">Chanoknan</span>
     </div>
 
     <div class="container">
       <img src="pic/test.jpg" alt="Avatar">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <span class="time-right">11:02</span>
+      <p>You can do everthing about programming from programming to web even networking when you graduate from software engineering branch.</p>
+      <span class="time-right">Weeruhputt</span>
     </div>
 
     <div class="container darker">
-
       <img src="pic/test.jpg" alt="Avatar" class="right">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <span class="time-left">11:05</span>
+      <p>Studying in software engineering will make you have skills in create production.<br>No matter if it's website or mobile application, you will do all of these efficiently because you will learn about the process of development step by step from 0 until you have a production that can be used for real and efficiently.
+Furthermore, the knowledge of the process of development can be applied to the other projects that are not relate to the computer too.</p>
+      <span class="time-left">Thanawat</span>
     </div>
   </div>
 
